# AutoFix

./: .gitignore  AGENTS.md  AutoFix.sln  Cargo.toml  README.md
app-core-rust/: Cargo.toml  README.md  build.rs
app-core-rust/src/: accessibility.rs  ipc.rs  lib.rs  main.rs  platform.rs  secrets.rs  storage.rs
app-core-rust/src/background/: admin.rs  app_identity.rs  components.rs  message_loop.rs  mod.rs  paths.rs  process_group.rs  security.rs  shortcuts.rs  target.rs  tests.rs  tray_exit_shutdown.rs
app-core-rust/src/background/tray/: assets.rs  mod.rs  native.rs  settings_app_path.rs  tests.rs
app-core-rust/src/ipc/: client.rs  mod.rs  protocol.rs  server.rs  server_shutdown.rs  state.rs  tests.rs
app-core-rust/src/secrets/: credential_manager.rs  dpapi.rs  mod.rs
app-core-rust/src/settings/: mod.rs  model.rs  shortcuts.rs  tests.rs  toml_io.rs  validation.rs
app-core-rust/src/storage/: logs.rs  migrations.rs  repositories.rs  tests.rs  types.rs
assets/brand/: autofix-tray-mask-16.alpha
crates/background-engine/: Cargo.toml
crates/background-engine/src/: accessibility.rs  main.rs  platform.rs  settings.rs
crates/background-engine/src/settings/: model.rs  validation.rs
docs/: README.md  coderabbit-cli-review.md  windows-dev-environment.md
installer/: README.md
scripts/: clear-stale-dev-outputs.ps1  run-app.ps1  verify-dev-env.ps1
settings-ui-wpf/: README.md
shared-schema/: README.md  ipc.schema.json
ui/settings-ui-tests/: AppIdentityTests.cs  AppLifetimeShutdownTests.cs  AppRuleStorageTests.cs  AsyncRelayCommandTests.cs  (+19 more)
(+61 files in other folders)
